# segmentation-lightning-base

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yaml
notebooks/: cvr-camvid-conversion.md  precipitaty.md  precipitaty_hyperparm.md  precipitaty_new.md
snippets/: bounding_box.py  merge-camvid.py  save-tiff.py
src/seglight/: data.py  datadict.py  domain.py  hyperparam.py  image_utils.py  inference.py  seg_io.py  training.py
